--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Hello there!</h1>
-    <h2>this is tds week 2 ga question 3 </h2>
-    23f3000046@ds.study.iitm.ac.in<br>
+    <h2>this is tds week 2 ga question 3</h2>
+    <!--email_off-->23f3000046@ds.study.iitm.ac.in<!--/email_off-->
 </body>
 </html>
